--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -53,7 +53,8 @@
         "8) Budget Analysts – $87,930\n",
         "\n",
         "\n",
-        "Actuaries and datas cientists have an exceptional job outlook such as 34% an 21% where as the middle jobs have a higher than average job outlook around 5-10 percent. The last two carrers were swiched because logisticians have 17 percent outlook and budget analysts only 1 percent but the salary diference is not too big."
+        "Actuaries and datas cientists have an exceptional job outlook such as 34% an 21% where as the middle jobs have a higher than average job outlook around 5-10 percent. The last two carrers were swiched because logisticians have 17 percent outlook and budget analysts only 1 percent but the salary diference is not too big.\n",
+        "Spreadsheet of jobs; https://docs.google.com/spreadsheets/d/1MuE5PiGyoGFee_L7RDiFmzcYHZt-OQOejpTcaJsCdqQ/edit?usp=sharing\n"
       ]
     },
     {
